test/distributions/cyclic/duplicateTargetLocales.noallow.good
duplicateTargetLocales.chpl:23: warning: scan has been serialized (see issue #12482)
duplicateTargetLocales.chpl:9: error: halt reached - CyclicDist does not allow duplicate targetLocales
