test/distributions/cyclic/duplicateTargetLocales.compopts
-sCyclicDist.allowDuplicateTargetLocales=false # duplicateTargetLocales.noallow.good
-sCyclicDist.allowDuplicateTargetLocales       # duplicateTargetLocales.allow.good
